# Alternative_simulation_manager

./: README.md  setup.cfg
src/alt_sim_man/alternative_simulation_manager/: alternative.py  alternative_simulation_manager.py  input_data.py  simulation_executor.py  simulation_step.py
src/alt_sim_man/utils/: __init__.py  utils_folder_manipulation.py
src/alternative_simulation_manager/alternative_simulation_manager/: alternative.py  alternative_simulation_manager.py
tests/alternative_simulation_manager/: alternative_simulation_manager_test.py  alternative_test.py  input_data_test.py  simulation_step_test.py
