[metadata]
name = alt_sim_man
version = 0.0.1
description = A package to manage simulation of multiple alternatives with any compatible simulation workflow.
author = Elie MEDIONI
author_email = elie.medioniwiii@gmail.com
url = https://github.com/Eliewiii/Alternative_simulation_manager
license = MIT

[options]
packages = find:
exclude =
    tests*
install_requires =
    dill


[options.extras_require]
dev =
    pytest

[options.packages.find]
where = src
exclude =
    tests*


[tool:pytest]
pythonpath = .

[coverage:run]
branch = True